禁用了大瑟尔-文图拉的Intel网卡驱动 更新了README.md
禁用了大瑟尔-文图拉的Intel网卡驱动 因为索诺玛和红衫表现正常 但莫哈维-文图拉会闪屏 时间关系暂时不会考虑
更新了README.md 修正了一些字段

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -649,7 +649,7 @@
                     <key>Comment</key>
                     <string>V2.3.0 | By RapidEFI-Pro</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/AirportItlwm</string>
                     <key>MaxKernel</key>
@@ -667,7 +667,7 @@
                     <key>Comment</key>
                     <string>V2.3.0 | By RapidEFI-Pro</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/AirportItlwm</string>
                     <key>MaxKernel</key>
@@ -685,7 +685,7 @@
                     <key>Comment</key>
                     <string>V2.3.0 | By RapidEFI-Pro</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/AirportItlwm</string>
                     <key>MaxKernel</key>
